# humocap

./: .bumpversion.cfg  CONTRIBUTING.rst  LICENSE  README.rst  setup.cfg  setup.py  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md
data/: brickbench_final.json  brickbench_final_berlin.json
docs/: conf.py  index.rst
docs/reference/: index.rst
rhino/: 00_the_great_repair_plan_paths_assembly.py  02_the_great_repair_TUM_fabrication.ghx  03_the_great_repair_Berlin_design.ghx  04_the_great_repair_Berlin_fabrication_no_lift.ghx  ex1_brickwall.ghx  ex2_robotic_bricklaying.ghx  helpers.py  humocap_setup.3dm  humocap_setup.3dmbak
ros_client/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros_client/catkin_ws/src/ur10_e_table/: CMakeLists.txt  package.xml
ros_client/catkin_ws/src/ur10_e_table/launch/: display.launch
ros_client/catkin_ws/src/ur10_e_table/urdf/: ur10e.urdf  ur10e_rot.urdf
ros_client/catkin_ws/src/ur10_e_table_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros_client/catkin_ws/src/ur10_e_table_moveit_config/config/: ur10e.srdf
ros_client/catkin_ws/src/ur10_e_table_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  (+8 more)
src/humocap/: __init__.py  __version__.py  fabrication_task.py
tests/: test_keypress.py  test_sample.py  test_urtasks_fabrication_threaded.py
(+28 files in other folders)
