<?xml version="1.0"?>
<package format="2">
  <name>ur10_e_table</name>
  <version>0.0.0</version>
  <description>The ur10_e_table package</description>
  <maintainer email="doerfler@tum.de">dk</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
